container size increased to prevent collapsing of widgets

--- a/css/style.css
+++ b/css/style.css
@@ -1333,3 +1333,6 @@ width: 11px;}
 	margin-bottom:5px;
 }
 
+.container{
+	width:1270px;
+}
